# ai-learning-lab-nexign-team-489

./: .dockerignore  docker-compose.yaml  pyproject.toml
app/: main.py
backend/: Dockerfile  download_model.py  pyproject.toml
backend/app/: db.py  main.py
backend/app/endpoints/: data.py  sentiment.py
backend/app/ml_models/: sentiment_model.py
backend/app/models/: sentiment_result.py
backend/tests/: test.py
frontend/: Dockerfile  main.py  pyproject.toml
