[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = [" Nasibullin Alan Maratovich <alan.nasibyllin@yandex.ru>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^5.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
